--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -1,14 +1,15 @@
 .header-bg {
     width: 100%;
-    height: 70px;
-    background-color: #263238;
+    height: 60px;
+    background-color: #A9A9A9;
+    display: flex;
+    align-items: center;
 }
 
 .header-logo {
     padding: 10px;
-    color: #fff;
     font-size: 20px;
-    align-content: center;
+    color: #fff;
 }
 
 .right{
@@ -16,14 +17,14 @@
 }
 
 .searchIcon{
-    color: black;
+    color: white;
 }
 
 .searchBox{
     border-radius: 4px;
     width: 300px;
     background-color: #c0c0c0;
-    align-content: center;
+    align-items: center;
     float: left;
 }
 
