Minor corrections done on all the pages

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -44,7 +44,7 @@
 .disp-block{
     display: block;
     border-radius: 4px;
-    background-color: #c0c0c0;
+    background-color: #A9A9A9;
 }
 
 .red {
