1. Added font-awesome icons for the menu items.
2. Cart functionality enhanced.

--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -26,6 +26,16 @@
     text-transform: uppercase;
 }
 
+.veg-item-color{
+ color: green;
+}
+
+.non-veg-item-color{
+    color: red;
+}
+
+
 .my-cart{
     margin: 30px 60px auto auto;
+    width: 400px;
 }
