--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -1,29 +1,85 @@
 .details-header-bg{
-    height: 300px;
-    background-color: grey;
+    height: 10%;
+    background-color: #d9d9d9;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    
+}
+
+.details-restImage {
+    display: flex;
+    flex-direction: row;
+    padding: 2%;
+}
+
+.details-restDetails {
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    width: auto;
+    max-width: 100%;
+}
+
+.details-rating-price {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+}
+
+.details-users {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    max-width: 60%;
+}
+
+.details-pricing{
+    padding-top: 4px;
+    padding-left: 80%;
+    width:450;
+}
+
+.details-rating {
+    font-weight: 500;
+    font-size: 18px;
+    width:auto;
+    padding-left: 4px;
+}
+
+.details-usersRated {
+    text-decoration: lightgray;
+    font-weight: bold;
+}
+
+.details-price {
+    display: flex;
+    flex-direction: row;
 }
 
 .restaurant-image{
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
 }
 
 .menu-cart-items{
     padding: 50px;
     display: flex;
+    justify-content: flex-start;
     flex-direction: row;
     align-items: top;
 }
 
 .menu-items{
-    width: 1000px;
+    width: 50%;
 }
 
 .category-name{
     text-transform: uppercase;
+}
+
+.itemContainer {
+    display: flex;
+    align-items: baseline;
 }
 
 .veg-item-color{
@@ -31,11 +87,43 @@
 }
 
 .non-veg-item-color{
-    color: red;
+    color: #9A2B13;
+}
+
+.div-container {
+    margin: 8px;
+    margin-left: 10%;
+}
+
+.price-container {
+    min-width: 50px;
+}
+
+.plus-container {
+    margin-left: 8px;
+}
+
+.div-items {
+    min-width: 180px;
 }
 
 
 .my-cart{
-    margin: 30px 60px auto auto;
-    width: 400px;
+    float: right;
+    width: 700px;
+    margin-left: 80px;
+}
+
+.cart-button {
+    margin-left: 70px;
+    width: 500px;
+}
+
+.cart-display{
+    margin-left: 20px;
+}
+
+.rupee-cart-container {
+    margin: 8px;
+    margin-left: 38%;
 }
